--- a/app/src/main/res/layout/tasklist_item.xml
+++ b/app/src/main/res/layout/tasklist_item.xml
@@ -19,10 +19,20 @@
         android:id="@+id/taskName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true"
         android:layout_toEndOf="@id/isDone"
-        android:text="TextView"
+        android:text="Task"
         android:textColor="#FFFFFF"
         android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/dateTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/taskName"
+        android:layout_toEndOf="@+id/isDone"
+        android:text="date"
+        android:textSize="10sp"
+        android:textColor="#A8A8A8" />
 
 </RelativeLayout>
