--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -14,7 +14,6 @@
         android:paddingBottom="10dp"
         android:text="Задачи"
         android:textAlignment="center"
-        android:textColor="#FFFEFE"
         android:textSize="24sp" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -24,8 +23,7 @@
         android:layout_below="@+id/textView"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
-        android:paddingTop="5dp"
-        android:background="#000000" />
+        android:paddingTop="5dp" />
 
     <Button
         android:id="@+id/addButton"
